<resources>
    <string name="app_name" translatable="false">Tripbook</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--    Agency Config Fragment-->
    <string name="text_agency_profile">Agency Profile</string>
    <string name="text_take_off_periods">Take off periods</string>
    <string name="text_event_planner">Event planner</string>
    <string name="text_money">Money</string>
    <string name="text_scanners">The scanners</string>
    <string name="text_scanner">Scanner</string>
    <string name="text_logo">LOGO</string>
    <string name="text_nationality">Nationality</string>
    <string name="text_helper_support_email">For your passengers to report problems or suggestions</string>
    <string name="text_towns">Towns</string>
    <string name="text_town">Town</string>
    <string name="text_delete">Delete</string>
    <string name="text_to">to</string>
    <string name="text_helper_locality">Select your current location from the list</string>
    <string name="text_cameroon_towns">Cameroon\'s towns</string>

    <string name="text_helper_trip_time">At what time do you wish to go?</string>

    <string name="text_enter_valid_phone">Enter valid number </string>
    <string name="text_photo_too_large">Photo is too large</string>
    <string name="text_warning">Warning!</string>
    <string name="text_fire_scanner_warning">Dou you really want to fire </string>

    <string name="text_items_per_row">How many items per row</string>
    <string name="text_from">From</string>
    <string name="text_empty_content">No results found</string>
    <string name="text_pick_time">Pick time</string>
    <string name="text_date_pattern_in_words" translatable="false">EEEE dd MMMM yyyy</string>

    <string name="text_error_locality_same_as_destination">Your locality cannot be your destination</string>
    <string name="string_menu_agency">Agency</string>
    <string name="text_signUp" translatable="false">Signup/Login</string>
    <string name="text_booker_profile">My Profile</string>
    <string name="text_change_phone_number">Change phone number</string>
    <string name="text_new">New</string>
    <string name="text_message_enter_new_phone">Enter the new phone number</string>
    <string name="text_old">Old</string>
    <string name="text_message_enter_old_phone">Enter your old phone number</string>
    <string name="text_you_will_receive_an_sms">You will receive a an SMS at this number</string>
    <string name="text_swap_phone">Swap phone numbers</string>
    <string name="text_qty_left">left</string>
    <string name="text_welcome">Welcome!</string>
    <string name="text_account">My Account</string>

    <!--    Dialog messages-->
    <string name="warn_select_photo">You must select profile photo</string>
    <string name="warn_recovery_phone_differnce_with_phone">Recovery phone number must be different from your phone number</string>
    <string name="warn_internet_required">You must be connected to access this page!</string>
    <string name="warn_is_required">Is required!</string>
    <string name="warn_gender_required">Specify your gender</string>
    <string name="warn_choose_correct_date">Choose a correct date</string>
    <string name="warn_invalid_phone">Invalid phone number</string>
    <string name="warn_wrong_confirmation_code">Wrong confirmation code</string>
    <string name="create_profile">Create your profile</string>
    <string name="create">Create</string>
    <string name="save_changes">Save changes</string>
    <string name="warn_old_phone_not_match">That is not your old phone number</string>
    <string name="sign_in_with_new_phone">Please, sign in with your new phone number</string>
    <string name="congrats_phone_changed">Congratulations! Your phone number has successfully been changed!</string>
    <string name="warn_code_not_send_yet">Code has not yet been sent yet, wait or try to resend it.</string>
    <string name="warn_old_phone_same_as_new">Your old phone number cannot be your new phone number</string>
    <string name="text_all_trip_books">"All trip-books "</string>
    <string name="text_verified_agency">Verified Agency</string>
    <string name="text_agency_gateway">Gateway</string>
    <string name="you_are_online">You are back Online!</string>
    <string name="you_are_offline">You are offline</string>
    <string name="text_unexpected_error_retry">Unexpected error, please try again!</string>
    <string name="text_edit">Edit</string>
    <string name="text_creation_month">Creation month</string>
    <string name="text_creation_date">Creation date</string>
    <string name="text_change">Change</string>
    <string name="text_go_online">Go online</string>
    <string name="text_message_agency_ready_go_online">This action will end the current event and your agency will become visible again to bookers</string>
    <string name="text_message_agency_not_ready_go_online">Your agency is not ready to go online, Please make all markers blue!</string>
    <string name="text_trip_date">Trip date</string>
    <string name="text_unsaved_changes">Unsaved Changes</string>
    <string name="text_do_not_save">Don\'t save</string>
    <string name="text_field_is_required">This field is required</string>
    <string name="text_invalid_email">Invalid email</string>
    <string name="text_invalid_phone">Invalid phone number</string>
    <string name="text_field_is_optional">this field is optional</string>
</resources>





























































































































































































































































































































