<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.booker.creation.ChangePhoneFragment">


            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/new_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/new_phone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_phone"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/text_new"
                app:helperText="@string/text_message_enter_new_phone"
                app:layout_constraintBottom_toTopOf="@+id/text_phone_swap_warning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/country_code_picker_new"
                app:layout_constraintTop_toBottomOf="@+id/old_phone">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputStyle"
                    android:inputType="phone"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:ccp_autoDetectCountry="true"
                app:ccp_textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/old_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/old_phone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/old_phone"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/text_old"
                app:helperText="@string/text_message_enter_old_phone"
                app:layout_constraintBottom_toTopOf="@+id/new_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/country_code_picker_old"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textInputStyle"
                    android:inputType="phone"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_phone_swap_warning"
                style="@style/messageStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_you_will_receive_an_sms"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_phone" />

            <Button
                android:id="@+id/btn_swap_phone_num"
                style="@style/positiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/text_swap_phone"
                app:icon="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>